2007-05-13  Jorge Gonzalez <jorgegonz@svn.gnome.org>

	* window-list/es/es.po: Updated Spanish translation
	* workspace-switcher/es/es.po: Updated Spanish translation

2007-05-13  Vincent Untz  <vuntz@gnome.org>

	* window-list/C/:
	* workspace-switcher/C/: those docs are moved to the user guide, so
	just add a redirect document for them.

2007-03-10  Changwoo Ryu  <cwryu@debian.org>

	* ko:
	* Makefile.am:
	* windows-list/Makefile.am:
	* windows-list/ko/*:
	* workspace-switcher/Makefile.am:
	* workspace-switcher/ko/*:
	* fish/Makefile.am: 
	* fish/ko/*: 
	* clock/ko/ko.po:
	Korean translation migrated to gnome-doc-utils and updated.

==================== 2.18.1 ====================

2007-04-04  Claudio Saavedra  <csaavedra@alumnos.utalca.cl>

	* fish/es/figures/fish_applet.png:
	* fish/es/es.po:
	* workspace-switcher/es/es.po:

	You get the idea from the two previos commits, don't you?
	
==================== 2.18.0 ====================

2007-02-27  Christophe Bliard  <christophe.bliard@trux.info>

	* fish/fr/figures/fish_applet.png: Removed to use new fish img
	* fish/fr/fr.po:
	* workspace-switcher/fr/fr.po:
	Update French translations (1 message and reference to fish img)

==================== 2.17.92 ====================

2007-02-26  Luca Ferretti  <elle.uca@libero.it>

	* fish/it/it.po:
	* workspace-switcher/it/it.po:
	Update Italian translations (1 message and reference to fish img)

2007-02-22  Daniel Nylander <po@danielnylander.se>

	* fish/sv/sv.po: Updated Swedish translation.
	* fish/sv/figures/*png: Removed old screenshot.

2007-02-21  Maxim Dziumanenko <mvd@mylinux.ua>

	* clock/uk/uk.po:
	* fish/uk/uk.po:
	* window-list/uk/uk.po:
	* workspace-switcher/uk/uk.po:
	Updated Ukrainian manual trasnlation.

2007-02-17  Vincent Untz  <vuntz@gnome.org>

	* fish/C/figures/fish_applet.png: use new fish image!
	Fix bug #355282

==================== 2.17.91 ====================

2007-02-12  APS Alam <aalam@users.sf.net>
