@@ -1,11 +1,44 @@
 <?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY appletversion "2.7.92">
+  <!ENTITY manrevision "2.8">
+  <!ENTITY date "August 2004">
+  <!ENTITY applet "Window List">
 
-<article id="index">
+]>
 
-<remark>This file has been created when we migrated the window list docs to the user guide in march 2007.</remark>
+<article id="index" lang="en">
+
+  <articleinfo> 
+	 <publisher role="author"> 
+		<publishername> GNOME Documentation Project </publishername> 
+	 </publisher> 
+	 <publisher role="maintainer"> 
+		<publishername> GNOME Documentation Project </publishername> 
+	 </publisher> 
+
+	 <authorgroup> 
+		<author> 
+		  <surname>GNOME Documentation Project</surname> 
+		</author> 
+	 </authorgroup>
+	 <revhistory>
+		<revision> 
+		  <revnumber>&applet; Applet Manual V&manrevision;</revnumber> 
+		  <date>&date;</date> 
+		</revision>
+	 </revhistory> 
+	 <abstract role="description">
+		<para>The &applet; enables you to manage the windows that
+		  are open on the GNOME Desktop.   Each window is represented by
+		  a button in the panel in which this applet is located.</para>
+	 </abstract>
+  </articleinfo> 
+
+<remark>This file has been created when we migrated the window list docs to the User Guide in March 2007.</remark>
 <remark>One day we should remove it completely, say in a couple of release cyles.</remark>
 
-	<anchor id="index"/>
 	<anchor id="windowlist-applet-fig"/>
 	<anchor id="windowlist-introduction-add"/>
 	<anchor id="window-groups"/>
