@@ -2,6 +2,6 @@ include $(top_srcdir)/gnome-doc-utils.make
 dist-hook: doc-dist-hook
 
 DOC_MODULE = window-list
-DOC_INCLUDES = legal.xml
+DOC_INCLUDES = 
 
 DOC_LINGUAS = es fr it ko pa ru sv uk zh_CN
