@@ -1,11 +1,45 @@
 <?xml version="1.0"?>
+<!DOCTYPE article PUBLIC "-//OASIS//DTD DocBook XML V4.1.2//EN" 
+"http://www.oasis-open.org/docbook/xml/4.1.2/docbookx.dtd" [
+  <!ENTITY legal SYSTEM "legal.xml">
+  <!ENTITY appletversion "2.7.92">
+  <!ENTITY manrevision "2.6">
+  <!ENTITY date "August 2004">
+  <!ENTITY applet "Workspace Switcher">
 
-<article id="index">
+]>
 
-<remark>This file has been created when we migrated the workspace docs to the user guide in march 2007.</remark>
+<article id="index" lang="en">
+
+  <articleinfo> 
+	 <publisher role="author"> 
+		<publishername> GNOME Documentation Project </publishername> 
+	 </publisher> 
+	 <publisher role="maintainer"> 
+		<publishername> GNOME Documentation Project </publishername> 
+	 </publisher> 
+
+	 <authorgroup> 
+		<author> 
+		  <surname>GNOME Documentation Project</surname> 
+		</author> 
+	 </authorgroup>
+	 <revhistory>
+		<revision> 
+		  <revnumber>&applet; Applet Manual V&manrevision;</revnumber> 
+		  <date>&date;</date> 
+		</revision>
+	 </revhistory> 
+	 <abstract role="description">
+		<para>The &applet; displays the workspaces for your GNOME
+		  Desktop in the panel and enables you to switch between them.  You
+                  can also manage windows by dragging them between workspaces.</para>
+	 </abstract>
+  </articleinfo>
+
+<remark>This file has been created when we migrated the workspace docs to the User Guide in March 2007.</remark>
 <remark>One day we should remove it completely, say in a couple of release cyles.</remark>
 
-	<anchor id="index"/>
 	<anchor id="workspacelist-introduction"/>
 	<anchor id="workspacelist-fig"/>
 	<anchor id="workspacelist-introduction-add"/>
