@@ -1,3 +1,11 @@
+2007-05-15  Vincent Untz  <vuntz@gnome.org>
+
+	* window-list/C/window-list.xml:
+	* window-list/Makefile.am:
+	* workspace-switcher/C/workspace-switcher.xml:
+	* workspace-switcher/Makefile.am: fix compilation
+	Fix bug #438374
+
 2007-05-13  Jorge Gonzalez <jorgegonz@svn.gnome.org>
 
 	* window-list/es/es.po: Updated Spanish translation
